--- a/AIPlayer/AIPlayer.vcxproj
+++ b/AIPlayer/AIPlayer.vcxproj
@@ -146,6 +146,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AIPlayer.cpp" />
+    <ClCompile Include="ConvBiasAct.cpp" />
+    <ClCompile Include="CrossEnropy.cpp" />
+    <ClCompile Include="DevUtils.cpp" />
+    <ClCompile Include="Input.cpp" />
+    <ClCompile Include="Layer.cpp" />
     <ClCompile Include="LeNet.cpp" />
     <ClCompile Include="LeNet.ixx" />
     <ClCompile Include="LeNetHelpers.cpp" />
@@ -154,11 +159,22 @@
     <ClCompile Include="LenetLayers.h" />
     <ClCompile Include="MinimalTest.cpp" />
     <ClCompile Include="MNISTData.ixx" />
+    <ClCompile Include="NeuralNetwork.cpp" />
+    <ClCompile Include="Pool.cpp" />
     <ClCompile Include="SimpleFrontendTest.ixx" />
+    <ClCompile Include="Softmax.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ConvBiasAct.h" />
+    <ClInclude Include="CrossEnropy.h" />
+    <ClInclude Include="DevUtils.h" />
+    <ClInclude Include="Input.h" />
+    <ClInclude Include="Layer.h" />
     <ClInclude Include="MinimalTest.h" />
+    <ClInclude Include="NeuralNetwork.h" />
+    <ClInclude Include="Pool.h" />
     <ClInclude Include="SimpleFrontendTest.h" />
+    <ClInclude Include="Softmax.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
