--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/cudnn-frontend"]
 	path = deps/cudnn-frontend
 	url = https://github.com/NVIDIA/cudnn-frontend.git
+[submodule "games/Battleships"]
+	path = games/Battleships
+	url = git@github.com:Riottomsk/Battleships.git
