--- a/AIPlayer/AIPlayer.vcxproj.filters
+++ b/AIPlayer/AIPlayer.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="NeuralNetwork.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ExperienceReplay.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Layer.h">
